fix: Wrap long file names in download cards (#1200)

--- a/client/components/Editor/styles/file.scss
+++ b/client/components/Editor/styles/file.scss
@@ -16,6 +16,7 @@
 			flex-grow: 1;
 			flex-shrink: 1;
 			margin: 0em 1em;
+			word-wrap: break-word;
 			a {
 				color: inherit;
 				&:hover {
